# llama.cpp-server-ohos

./: .gitignore  README.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  napi_init_back.cpp  server.cpp  utils.hpp
entry/src/main/cpp/llama/arm64-v8a/include/: build-info.cpp  common.h
entry/src/main/cpp/openmp/: .gitignore
entry/src/main/cpp/server/webui/: package.json
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/cpp/webui/: package-lock.json
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/base/element/: string.json
